--- a/views/contact.gohtml
+++ b/views/contact.gohtml
@@ -2,3 +2,5 @@ To get in touch, please send an email to
 <a href="mailto:support@photoshoot.com\">
     support@photoshoot.com
 </a>
+
+{{template "footer"}}
