--- a/views/contact.gohtml
+++ b/views/contact.gohtml
@@ -1,6 +1,8 @@
-To get in touch, please send an email to
-<a href="mailto:support@photoshoot.com\">
-    support@photoshoot.com
-</a>
+{{define "yield"}}
+    To get in touch, please send an email to
+    <a href="mailto:support@photoshoot.com\">
+        support@photoshoot.com
+    </a>
 
-{{template "footer"}}
+    {{template "footer"}}
+{{end}}
