--- a/views/users/new.gohtml
+++ b/views/users/new.gohtml
@@ -18,6 +18,12 @@
 {{define "signupForm"}}
     <form action="/signup" method="POST">
         <div class="form-group">
+            <label for="name">
+                Name
+            </label>
+            <input type="text" id="name" class="form-control" name="name" placeholder="Full Name">
+        </div>
+        <div class="form-group">
             <label for="email">
                 Email address
             </label>
