Change Name and Start Cookies

--- a/views/layout/bootstrap.gohtml
+++ b/views/layout/bootstrap.gohtml
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Photoshoot</title>
+        <title>Photo Gallery</title>
         <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     </head>
     <body>
