--- a/views/static/contact.gohtml
+++ b/views/static/contact.gohtml
@@ -1,6 +1,6 @@
 {{define "yield"}}
     To get in touch, please send an email to
-    <a href="mailto:support@photoshoot.com\">
-        support@photoshoot.com
+    <a href="mailto:support@photogallery.com\">
+        support@photogallery.com
     </a>
 {{end}}
