--- a/views/layout/alert.gohtml
+++ b/views/layout/alert.gohtml
@@ -1,8 +1,8 @@
 {{define "alert"}}
-<div class="alert alert-danger alert-dismissible" role="alert">
+<div class="alert alert-{{.Level}} alert-dismissible" role="alert">
     <button class="close" type="button" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
-    <strong>Danger!</strong> Something went wrong! Oh no!
+    {{.Message}}
 </div>
 {{end}}
