--- a/views/galleries/edit.gohtml
+++ b/views/galleries/edit.gohtml
@@ -21,4 +21,7 @@
     </div>
     <button type="submit" class="btn btn-primary">Update</button>
 </form>
+<form action="/galleries/{{.ID}}/delete" method="POST">
+    <button class="btn btn-danger" type="submit">Delete</button>
+</form>
 {{end}}
