--- a/views/galleries/index.gohtml
+++ b/views/galleries/index.gohtml
@@ -1,4 +1,41 @@
 {{define "yield"}}
-TODO: Implement the Index view.
-Data provided: {{.}}
+<div class="row">
+    <div class="col-md-12">
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Title</th>
+                    <th>View</th>
+                    <th>Edit</th>
+                </tr>
+            </thead>
+            <tbody>
+                {{range .}}
+                    <tr>
+                        <th scope="row">
+                            {{.ID}}
+                        </th>
+                        <td>
+                            {{.Title}}
+                        </td>
+                        <td>
+                            <a href="/galleries/{{.ID}}">
+                                View
+                            </a>
+                        </td>
+                        <td>
+                            <a href="/galleries/{{.ID}}/edit">
+                                Edit
+                            </a>
+                        </td>
+                    </tr>
+                {{end}}
+            </tbody>
+        </table>
+        <a class="btn btn-primary" href="/galleries/new">
+            New Gallery
+        </a>
+    </div>
+</div>
 {{end}}
