--- a/views/layout/navbar.gohtml
+++ b/views/layout/navbar.gohtml
@@ -12,8 +12,23 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/">Home</a></li>
-                <li><a href="/contact">Contact</a></li>
+                <li>
+                    <a href="/">
+                        Home
+                    </a>
+                </li>
+                <li>
+                    <a href="/contact">
+                        Contact
+                    </a>
+                </li>
+                {{if .User}}
+                    <li>
+                        <a href="/galleries">
+                            Galleries
+                        </a>
+                    </li>
+                {{end}}
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/login">Log In</a></li>
