--- a/views/galleries/edit.gohtml
+++ b/views/galleries/edit.gohtml
@@ -49,13 +49,9 @@
 {{end}}
 
 {{define "galleryImages"}}
-<ul>
-    {{range .Images}}
-        <li>
-            {{.}}
-        </li>
-    {{end}}
-</ul>
+{{range .Images}}
+    <img src="{{.}}">
+{{end}}
 {{end}}
 
 {{define "uploadImageForm"}}
