--- a/views/galleries/edit.gohtml
+++ b/views/galleries/edit.gohtml
@@ -2,6 +2,9 @@
 <div class="row">
     <div class="col-md-10 col-md-offset-1">
         <h2>Edit Your Gallery</h3>
+        <a href="/galleries/{{.ID}}">
+            View this gallery
+        </a>
         <hr>
     </div>
     <div class="col-md-12">
@@ -49,9 +52,20 @@
 {{end}}
 
 {{define "galleryImages"}}
-{{range .Images}}
-    <img src="{{.}}">
+{{range .ImageSplitN 6}}
+    <div class="col-md-2">
+        {{range .}}
+            <a href="{{.}}">
+                <img class="thumbnail" src="{{.}}">
+            </a>
+        {{end}}
+    </div>
 {{end}}
+<style>
+    .thumbnail {
+        width: 100%;
+    }
+</style>
 {{end}}
 
 {{define "uploadImageForm"}}
