--- a/views/galleries/show.gohtml
+++ b/views/galleries/show.gohtml
@@ -4,9 +4,23 @@
         <h1>
             {{.Title}}
         </h1>
-        {{range .Images}}
-            <img src="{{.}}">
-        {{end}}
+        <hr>
     </div>
 </div>
+<div class="row">
+    {{range .ImageSplitN 3}}
+        <div class="col-md-4">
+            {{range .}}
+                <a href="{{.}}">
+                    <img class="thumbnail" src="{{.}}">
+                </a>
+            {{end}}
+        </div>
+    {{end}}
+</div>
+<style>
+    .thumbnail {
+        width: 100%;
+    }
+</style>
 {{end}}
