--- a/views/users/login.gohtml
+++ b/views/users/login.gohtml
@@ -4,7 +4,7 @@
         <div class="panel panel-primary">
             <div class="panel-heading">
                 <h3 class="panel-title">
-                    Welcome Back!
+                    Log In
                 </h3>
             </div>
             <div class="panel-body">
