--- a/views/users/new.gohtml
+++ b/views/users/new.gohtml
@@ -4,7 +4,7 @@
         <div class="panel panel-primary">
             <div class="panel-heading">
                 <h3 class="panel-title">
-                    Sign Up Now!
+                    Sign Up
                 </h3>
             </div>
             <div class="panel-body">
